[project]
name = "acron"
version = "0.2.2"
description = "Lightweight asyncio scheduler with cron compatible syntax"
authors = [
  {name = "Aitor Iturri", email = "aitor.iturri@appgate.com"},
  {name = "Thomas Cellerier", email = "thomas.cellerier@appgate.com"}
]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "croniter>=3.0.3",
]

[project.urls]
Homepage = "https://github.com/appgate/acron"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "types-croniter>=3.0.3.20240731",
]
